# bc-fastkit

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/bc_fastkit/: __init__.py
src/bc_fastkit/api/: __init__.py  base.py
src/bc_fastkit/common/: __init__.py  query.py  typing.py  uitls.py
src/bc_fastkit/crud/: __init__.py
src/bc_fastkit/crud/base/: __init__.py  async_base.py  base.py
src/bc_fastkit/crud/base/mixin/: async_hook.py  hook.py  price.py  relation.py  subject.py
src/bc_fastkit/crud/core/: async_cud.py  async_query.py  cud.py  query.py  typing.py
src/bc_fastkit/model/: __init__.py  column.py
src/bc_fastkit/schema/: __init__.py
src/bc_fastkit/utils/: __init__.py  queue.py
